# harknology

./: .env  .env.sample  .gitignore  Cargo.toml  bun.lockb  harknology.code-workspace  import_map.json  index.html  next.config.js  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  turbo.json
.codesandbox/: tasks.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ws-server-deploy.yml
.moon/: toolchain.yml
api/: Cargo.toml
app/: layout.tsx  page.tsx
app/auth/: lucia.ts
app/components/: LoadingIndicator.tsx  ResponseDisplay.tsx  ResponseEditor.tsx  Sidebar.tsx
apps/frontend/: package.json
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/server/src/graphql/: mod.rs
pages/: _app.tsx  classes.tsx  dashboard.tsx  discussions.tsx  index.tsx  offline.tsx
pages-old/: dashboard.tsx
prisma/: schema.prisma
public/: logo.256-maskable.xcf  manifest.json  sw.js  sw.js.map
routes/: index.tsx
server/: class.ts  discussion.ts  joinCode.ts  router.ts  user.ts  util.ts
src/: App.vue  api.ts  auth.ts  class.rs  class_preview.rs  input.ts  json.ts  links.json  main.rs  main.ts  schema.ts
styles/: AppNav.module.css  ClassView.module.css  DashboardLayout.module.css  Editor.module.css  Home.module.css  LoadingIndicator.module.css  Modal.module.css  Sidebar.module.css  UserDisplay.module.css  globals.css  your.css
supabase/: config.toml  seed.sql
util/: supabase.ts
web/: package.json  tsconfig.json
ws-server/: Dockerfile  checkClassAuth.js  config.js  index.js  package.json
(+212 files in other folders)
