[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.10"
async-graphql-axum = "6.0.10"
axum = "0.6.20"
clerk-rs = "0.1.8"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = [
    "postgresql",
] }
serde = "1.0.192"
tokio = "1.34.0"
